# incendium-stubs

./: .cz.toml  .cz.yaml  .flake8  .pre-commit-config.yaml  .wakatime-project  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  main.yml  pip-compile-upgrade.yml  pr-build.yml  publish.yml  pypi_upload.yml  tox-uv.yml
stubs/incendium/: constants.pyi  dataset.pyi  db.pyi  exceptions.pyi  net.pyi  tag.pyi  user.pyi  util.pyi
stubs/incendium/helper/: types.pyi
stubs/incendium/vision/: gui.pyi  nav.pyi
