[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "incendium_stubs"
version = "2023.1.0.post1"
description = "incendium stubs package"
readme = "README.md"
keywords = [
  "hmi",
  "ignition",
  "inductive automation",
  "scada",
]
license = {file = "LICENSE"}
authors = [{name = "César Román", email = "cesar@thecesrom.dev"}]
requires-python = "<3.11, >=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Stubs Only",
    "Typing :: Typed",
]
dependencies = [
  "ignition-api-stubs",
]
[project.urls]
Funding = "https://github.com/sponsors/thecesrom"
Homepage = "https://thecesrom.dev/incendium-stubs"
Source = "https://github.com/thecesrom/incendium-stubs"
Tracker = "https://github.com/thecesrom/incendium-stubs/issues"


[tool.setuptools]
include-package-data = true
package-dir = {"" = "stubs"}

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
