[metadata]
name = incendium_stubs
version = 2022.9.2
description = incendium stubs package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://thecesrom.dev/incendium-stubs
author = César Román
author_email = cesar@thecesrom.dev
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Stubs Only
    Typing :: Typed
keywords =
    hmi
    ignition
    inductive automation
    scada
project_urls =
    Funding = https://github.com/sponsors/thecesrom
    Source = https://github.com/thecesrom/incendium-stubs
    Tracker = https://github.com/thecesrom/incendium-stubs/issues

[options]
install_requires =
    ignition-api-stubs
python_requires = >=3.6
include_package_data = True
package_dir =
    =stubs

[options.package_data]
* = *.pyi, py.typed
